# MirrorBuddy

./: .auto-claude-security.json  .auto-claude-status  .claude_settings.json  .claudeignore  .env.example  .file-line-limit.json  .gitguardian.yaml  .gitignore  .implementation-summary.md  .lintstagedrc.json  .mcp.json.example  .prettierignore  .swiftlint.yml  .vercelignore  AGENTS.md  ALL_FIXES_COMPLETE.md  ANALISI_REPOSITORY.md  ARCHITECTURE-DIAGRAMS.md  ARCHITECTURE.md  BATCH_FIX_PLAN.md  CHANGELOG.md  CLAUDE.md  CODEX-TASKS.md  CODE_LOCATION_SUMMARY.md  COMPLETE_WORK_SUMMARY.md  COMPLIANCE_AUDIT_IMPLEMENTATION.md  COMPONENT_SPLIT_REPORT.md  CONTRIBUTING-MONOREPO.md  CONTRIBUTING.md  CROSS_PLATFORM_STATUS.md  DEPENDENCY_INJECTION_PLAN.md  DUPLICATION-ANALYSIS.md  Dockerfile  FEATURES.md  FILE_SPLITTING_PROGRESS.md  FinalPlanCodex.md  GOOGLE_API_SETUP.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION_NOTES.md  ImprovementsJan14.md  (+72 more)
.archive/: F-73-VERIFICATION.md  F-XX-VERIFICATION-T2-01.md  V1Codex.md  V1_1ml.md
.claude/: AGENT_TASK_MAPPING.md  ci-knowledge.md  constitution.md  settings.json  settings.local.json
.codegraph/: config.json
e2e/: README.md  (+112 more)
robot/: .env.example  README.md  pyproject.toml
robot/reachy_mini_mirrorbuddy/: __init__.py  audio_io.py  azure_realtime.py  camera.py  config.py  controller.py  device.py  dsa.py  main.py  mirrorbuddy_client.py  movements.py  prompt_builder.py  rt_messages.py  safety.py  session_flow.py  settings_page.py  settings_ui.py  tools.py
robot/tests/: test_barge_in.py  test_config_barge.py  test_device.py  test_session_flow.py
(+7955 files in other folders)
